--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
-        "ionic-angular": "3.6.0",
+        "ionic-angular": "^3.6.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "lisk-js": "^0.4.5",
@@ -59,7 +59,7 @@
         "zone.js": "0.8.12"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "2.1.3",
+        "@ionic/app-scripts": "^2.1.4",
         "typescript": "2.3.4"
     },
     "description": "An Ionic project",
