--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ionic-native/file": "^4.2.1",
         "@ionic-native/file-chooser": "^4.2.1",
         "@ionic-native/fingerprint-aio": "^4.2.0",
+        "@ionic-native/pin-dialog": "^4.2.1",
         "@ionic-native/screenshot": "^4.2.1",
         "@ionic-native/secure-storage": "^4.2.0",
         "@ionic-native/splash-screen": "3.12.1",
@@ -42,6 +43,7 @@
         "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-filechooser": "^1.0.1",
         "cordova-plugin-fingerprint-aio": "^1.2.1",
+        "cordova-plugin-pin-dialog": "^0.1.3",
         "cordova-plugin-secure-storage": "^2.6.8",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
@@ -77,7 +79,8 @@
             "com.darktalker.cordova.screenshot": {},
             "cordova-clipboard": {},
             "cordova-plugin-file": {},
-            "cordova-plugin-filechooser": {}
+            "cordova-plugin-filechooser": {},
+            "cordova-plugin-pin-dialog": {}
         },
         "platforms": [
             "android"
