--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "LiskGDTWallet",
-    "version": "1.0.0",
+    "version": "1.1.1",
     "author": "MrV",
     "homepage": "https://liskgdt.net/",
     "private": true,
@@ -12,29 +12,30 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.4.3",
-        "@angular/compiler": "4.4.3",
-        "@angular/compiler-cli": "4.4.3",
-        "@angular/core": "4.4.3",
-        "@angular/forms": "4.4.3",
-        "@angular/http": "4.4.3",
-        "@angular/platform-browser": "4.4.3",
-        "@angular/platform-browser-dynamic": "4.4.3",
-        "@ionic-native/barcode-scanner": "^4.3.1",
-        "@ionic-native/clipboard": "^4.3.1",
-        "@ionic-native/core": "^4.3.1",
-        "@ionic-native/file": "^4.3.1",
-        "@ionic-native/file-chooser": "^4.3.1",
-        "@ionic-native/fingerprint-aio": "^4.3.1",
-        "@ionic-native/pin-dialog": "^4.3.1",
-        "@ionic-native/screenshot": "^4.3.1",
-        "@ionic-native/secure-storage": "^4.3.1",
-        "@ionic-native/splash-screen": "^4.3.1",
-        "@ionic-native/status-bar": "^4.3.1",
-        "@ionic/storage": "2.0.1",
+        "@angular/common": "5.0.0",
+        "@angular/compiler": "5.0.0",
+        "@angular/compiler-cli": "5.0.0",
+        "@angular/core": "5.0.0",
+        "@angular/forms": "5.0.0",
+        "@angular/http": "5.0.0",
+        "@angular/platform-browser": "5.0.0",
+        "@angular/platform-browser-dynamic": "5.0.0",
+        "@ionic-native/barcode-scanner": "^4.4.2",
+        "@ionic-native/clipboard": "^4.4.2",
+        "@ionic-native/core": "^4.4.2",
+        "@ionic-native/file": "^4.4.2",
+        "@ionic-native/file-chooser": "^4.4.2",
+        "@ionic-native/fingerprint-aio": "^4.4.2",
+        "@ionic-native/pin-dialog": "^4.4.2",
+        "@ionic-native/screenshot": "^4.4.2",
+        "@ionic-native/secure-storage": "^4.4.2",
+        "@ionic-native/splash-screen": "^4.4.2",
+        "@ionic-native/status-bar": "^4.4.2",
+        "@ionic/storage": "2.1.3",
         "@ngx-translate/core": "^8.0.0",
         "@ngx-translate/http-loader": "^2.0.0",
         "@techiediaries/ngx-qrcode": "0.0.5",
+        "bip39": "^2.4.0",
         "com.darktalker.cordova.screenshot": "^0.1.6",
         "cordova-android": "^6.2.3",
         "cordova-clipboard": "^1.1.0",
@@ -52,7 +53,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
-        "ionic-angular": "^3.7.1",
+        "ionic-angular": "^3.9.2",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "lisk-js": "^0.5.0",
@@ -60,14 +61,14 @@
         "ngx-pagination": "^3.0.1",
         "ngx-qrcode2": "0.0.5",
         "phonegap-plugin-barcodescanner": "^6.0.8",
-        "rxjs": "5.4.3",
+        "rxjs": "5.5.2",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.18"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "3.0.1",
-        "ionic": "3.13.2",
-        "typescript": "2.5.3"
+        "@ionic/app-scripts": "^3.1.2",
+        "ionic": "3.18.0",
+        "typescript": "2.4.2"
     },
     "description": "An Ionic project",
     "cordova": {
