--- a/package.json
+++ b/package.json
@@ -1,99 +1,99 @@
 {
-    "name": "LiskGDTWallet",
-    "version": "1.1.1",
-    "author": "MrV",
-    "homepage": "https://liskgdt.net/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "LiskGDTWallet",
+  "version": "2.0.0",
+  "author": "MrV",
+  "homepage": "https://liskgdt.net/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/animations": "5.2.9",
+    "@angular/common": "5.2.9",
+    "@angular/compiler": "5.2.9",
+    "@angular/compiler-cli": "5.2.9",
+    "@angular/core": "5.2.9",
+    "@angular/forms": "5.2.9",
+    "@angular/http": "5.2.9",
+    "@angular/platform-browser": "5.2.9",
+    "@angular/platform-browser-dynamic": "5.2.9",
+    "@ionic-native/barcode-scanner": "^4.6.0",
+    "@ionic-native/clipboard": "^4.7.0",
+    "@ionic-native/core": "4.6.0",
+    "@ionic-native/file": "^4.6.0",
+    "@ionic-native/file-chooser": "^4.6.0",
+    "@ionic-native/fingerprint-aio": "^4.7.0",
+    "@ionic-native/pin-dialog": "^4.6.0",
+    "@ionic-native/screenshot": "^4.6.0",
+    "@ionic-native/secure-storage": "^4.6.0",
+    "@ionic-native/splash-screen": "4.6.0",
+    "@ionic-native/status-bar": "4.6.0",
+    "@ionic/storage": "2.1.3",
+    "@ngx-translate/core": "9.1.1",
+    "@ngx-translate/http-loader": "2.0.1",
+    "@techiediaries/ngx-qrcode": "0.0.5",
+    "bip39": "^2.5.0",
+    "com.darktalker.cordova.screenshot": "^0.1.6",
+    "cordova-android": "~7.0.0",
+    "cordova-clipboard": "^1.2.1",
+    "cordova-ios": "^4.5.4",
+    "cordova-plugin-add-swift-support": "^1.7.2",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-filechooser": "^1.0.1",
+    "cordova-plugin-fingerprint-aio": "^1.3.7",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-pin-dialog": "~0.1.3",
+    "cordova-plugin-secure-storage": "^2.6.8",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "ionic-angular": "^3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "^4.2.0",
+    "lisk-elements": "^1.0.0",
+    "ngx-infinite-scroll": "^0.5.1",
+    "ngx-pagination": "^3.1.1",
+    "ngx-qrcode2": "^0.1.0",
+    "phonegap-plugin-barcodescanner": "^7.1.2",
+    "rxjs": "5.5.8",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.20"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "^3.1.8",
+    "ionic": "3.20.0",
+    "typescript": "~2.6.2"
+  },
+  "description": "A mobile Lisk Wallet sponsored by the GDT",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-secure-storage": {},
+      "ionic-plugin-keyboard": {},
+      "com.darktalker.cordova.screenshot": {},
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-pin-dialog": {},
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-fingerprint-aio": {
+        "FACEID_USAGE_DESCRIPTION": " "
+      },
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-clipboard": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-ionic-webview": {}
     },
-    "dependencies": {
-        "@angular/common": "5.0.0",
-        "@angular/compiler": "5.0.0",
-        "@angular/compiler-cli": "5.0.0",
-        "@angular/core": "5.0.0",
-        "@angular/forms": "5.0.0",
-        "@angular/http": "5.0.0",
-        "@angular/platform-browser": "5.0.0",
-        "@angular/platform-browser-dynamic": "5.0.0",
-        "@ionic-native/barcode-scanner": "^4.4.2",
-        "@ionic-native/clipboard": "^4.4.2",
-        "@ionic-native/core": "^4.4.2",
-        "@ionic-native/file": "^4.4.2",
-        "@ionic-native/file-chooser": "^4.4.2",
-        "@ionic-native/fingerprint-aio": "^4.4.2",
-        "@ionic-native/pin-dialog": "^4.4.2",
-        "@ionic-native/screenshot": "^4.4.2",
-        "@ionic-native/secure-storage": "^4.4.2",
-        "@ionic-native/splash-screen": "^4.4.2",
-        "@ionic-native/status-bar": "^4.4.2",
-        "@ionic/storage": "2.1.3",
-        "@ngx-translate/core": "^8.0.0",
-        "@ngx-translate/http-loader": "^2.0.0",
-        "@techiediaries/ngx-qrcode": "0.0.5",
-        "bip39": "^2.4.0",
-        "com.darktalker.cordova.screenshot": "^0.1.6",
-        "cordova-android": "^6.2.3",
-        "cordova-clipboard": "^1.1.0",
-        "cordova-ios": "^4.5.2",
-        "cordova-plugin-add-swift-support": "^1.7.0",
-        "cordova-plugin-compat": "^1.2.0",
-        "cordova-plugin-console": "^1.1.0",
-        "cordova-plugin-device": "^1.1.6",
-        "cordova-plugin-file": "^4.3.3",
-        "cordova-plugin-filechooser": "^1.0.1",
-        "cordova-plugin-fingerprint-aio": "^1.3.2",
-        "cordova-plugin-ionic-webview": "^1.1.15",
-        "cordova-plugin-pin-dialog": "~0.1.3",
-        "cordova-plugin-secure-storage": "^2.6.8",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.3",
-        "cordova-plugin-whitelist": "^1.3.2",
-        "ionic-angular": "^3.9.2",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "lisk-js": "^0.5.0",
-        "ngx-infinite-scroll": "^0.5.1",
-        "ngx-pagination": "^3.0.1",
-        "ngx-qrcode2": "0.0.5",
-        "phonegap-plugin-barcodescanner": "^6.0.8",
-        "rxjs": "5.5.2",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "^3.1.2",
-        "ionic": "3.18.0",
-        "typescript": "2.4.2"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-secure-storage": {},
-            "phonegap-plugin-barcodescanner": {
-                "CAMERA_USAGE_DESCRIPTION": "Camera used to scan QR codes"
-            },
-            "cordova-plugin-fingerprint-aio": {},
-            "cordova-plugin-console": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "com.darktalker.cordova.screenshot": {},
-            "cordova-clipboard": {},
-            "cordova-plugin-file": {},
-            "cordova-plugin-filechooser": {},
-            "cordova-plugin-pin-dialog": {},
-            "cordova-plugin-ionic-webview": {}
-        },
-        "platforms": [
-            "android",
-            "ios"
-        ]
-    }
+    "platforms": [
+      "ios",
+      "android"
+    ]
+  }
 }
